src/main/java/ac/bristol/bragaglia/xhail/parsers/clasp3/Clasp3Parser.java
// Generated from Clasp3.g4 by ANTLR 4.2.2

package ac.bristol.bragaglia.xhail.parsers.clasp3;

/**
 * @author stefano
 *
 */
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class Clasp3Parser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__22=1, T__21=2, T__20=3, T__19=4, T__18=5, T__17=6, T__16=7, T__15=8, 
		T__14=9, T__13=10, T__12=11, T__11=12, T__10=13, T__9=14, T__8=15, T__7=16, 
		T__6=17, T__5=18, T__4=19, T__3=20, T__2=21, T__1=22, T__0=23, BACKSLASH=24, 
		COLON=25, COMMA=26, DOT=27, DOTDOT=28, SLASH=29, PAREN_LEFT=30, PAREN_RIGHT=31, 
		SPACE=32, DRIVE=33, IDENTIFIER=34, INTEGER=35, FLOAT=36, LETTER=37, NEWLINE=38, 
		QUOTED=39, STRING=40, PLUS=41, MINUS=42;
	public static final String[] tokenNames = {
		"<INVALID>", "'s'", "'s)'", "'CPU Time     : '", "'s Unsat: '", "'SATISFIABLE'", 
		"'Reading from stdin'", "'Reading from '", "'Solving...'", "'Calls        : '", 
		"'s 1st Model: '", "'Models       : '", "'Answer: '", "'Time         : '", 
		"'OPTIMUM FOUND'", "'Optimization : '", "'  Optimum    : no'", "'clasp version 3.'", 
		"'  Optimal    : '", "'  Optimum    : yes'", "'UNKNOWN'", "'UNSATISFIABLE'", 
		"'s (Solving: '", "'Optimization: '", "'\\'", "':'", "','", "'.'", "'..'", 
		"'/'", "'('", "')'", "' '", "DRIVE", "IDENTIFIER", "INTEGER", "FLOAT", 
		"LETTER", "NEWLINE", "QUOTED", "STRING", "'+'", "'-'"
	};
	public static final int
		RULE_output = 0, RULE_version = 1, RULE_source = 2, RULE_path = 3, RULE_folder = 4, 
		RULE_filename = 5, RULE_extension = 6, RULE_solving = 7, RULE_answer = 8, 
		RULE_model = 9, RULE_fact = 10, RULE_atom = 11, RULE_values = 12, RULE_number = 13, 
		RULE_result = 14, RULE_separation = 15, RULE_statistics = 16, RULE_models = 17, 
		RULE_optimum = 18, RULE_optimal = 19, RULE_optimization = 20, RULE_optValues = 21, 
		RULE_calls = 22, RULE_time = 23, RULE_cputime = 24;
	public static final String[] ruleNames = {
		"output", "version", "source", "path", "folder", "filename", "extension", 
		"solving", "answer", "model", "fact", "atom", "values", "number", "result", 
		"separation", "statistics", "models", "optimum", "optimal", "optimization", 
		"optValues", "calls", "time", "cputime"
	};

	@Override
	public String getGrammarFileName() { return "Clasp3.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Clasp3Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class OutputContext extends ParserRuleContext {
		public SourceContext source() {
			return getRuleContext(SourceContext.class,0);
		}
		public VersionContext version() {
			return getRuleContext(VersionContext.class,0);
		}
		public SeparationContext separation() {
			return getRuleContext(SeparationContext.class,0);
		}
		public SolvingContext solving() {
			return getRuleContext(SolvingContext.class,0);
		}
		public ResultContext result() {
			return getRuleContext(ResultContext.class,0);
		}
		public AnswerContext answer(int i) {
			return getRuleContext(AnswerContext.class,i);
		}
		public TerminalNode EOF() { return getToken(Clasp3Parser.EOF, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(Clasp3Parser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(Clasp3Parser.NEWLINE, i);
		}
		public List<AnswerContext> answer() {
			return getRuleContexts(AnswerContext.class);
		}
		public StatisticsContext statistics() {
			return getRuleContext(StatisticsContext.class,0);
		}
		public OutputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_output; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Clasp3Listener ) ((Clasp3Listener)listener).enterOutput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Clasp3Listener ) ((Clasp3Listener)listener).exitOutput(this);
		}
	}

	public final OutputContext output() throws RecognitionException {
		OutputContext _localctx = new OutputContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_output);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50); version();
			setState(51); source();
			setState(53);
			_la = _input.LA(1);
			if (_la==8) {
				{
				setState(52); solving();
				}
			}

			setState(58);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==12) {
				{
				{
				setState(55); answer();
				}
				}
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(61); result();
			setState(62); separation();
			setState(63); statistics();
			setState(67);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(64); match(NEWLINE);
				}
				}
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(70); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VersionContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(Clasp3Parser.NEWLINE, 0); }
		public TerminalNode FLOAT() { return getToken(Clasp3Parser.FLOAT, 0); }
		public VersionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_version; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Clasp3Listener ) ((Clasp3Listener)listener).enterVersion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Clasp3Listener ) ((Clasp3Listener)listener).exitVersion(this);
		}
	}

	public final VersionContext version() throws RecognitionException {
		VersionContext _localctx = new VersionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_version);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72); match(17);
			setState(73); match(FLOAT);
			setState(74); match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SourceContext extends ParserRuleContext {
		public SourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_source; }
	 
		public SourceContext() { }
		public void copyFrom(SourceContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SourceSTDINContext extends SourceContext {
		public TerminalNode NEWLINE() { return getToken(Clasp3Parser.NEWLINE, 0); }
		public SourceSTDINContext(SourceContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Clasp3Listener ) ((Clasp3Listener)listener).enterSourceSTDIN(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Clasp3Listener ) ((Clasp3Listener)listener).exitSourceSTDIN(this);
		}
	}
	public static class SourceFileContext extends SourceContext {
		public TerminalNode NEWLINE() { return getToken(Clasp3Parser.NEWLINE, 0); }
		public PathContext path() {
			return getRuleContext(PathContext.class,0);
		}
		public SourceFileContext(SourceContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Clasp3Listener ) ((Clasp3Listener)listener).enterSourceFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Clasp3Listener ) ((Clasp3Listener)listener).exitSourceFile(this);
		}
	}

	public final SourceContext source() throws RecognitionException {
		SourceContext _localctx = new SourceContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_source);
		try {
			setState(82);
			switch (_input.LA(1)) {
			case 6:
				_localctx = new SourceSTDINContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(76); match(6);
				setState(77); match(NEWLINE);
				}
				break;
			case 7:
				_localctx = new SourceFileContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(78); match(7);
				setState(79); path();
				setState(80); match(NEWLINE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PathContext extends ParserRuleContext {
		public PathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_path; }
	 
		public PathContext() { }
		public void copyFrom(PathContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PathWindowsContext extends PathContext {
		public List<TerminalNode> BACKSLASH() { return getTokens(Clasp3Parser.BACKSLASH); }
		public FilenameContext filename() {
			return getRuleContext(FilenameContext.class,0);
		}
		public List<FolderContext> folder() {
			return getRuleContexts(FolderContext.class);
		}
		public TerminalNode DRIVE() { return getToken(Clasp3Parser.DRIVE, 0); }
		public FolderContext folder(int i) {
			return getRuleContext(FolderContext.class,i);
		}
		public TerminalNode BACKSLASH(int i) {
			return getToken(Clasp3Parser.BACKSLASH, i);
		}
		public PathWindowsContext(PathContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Clasp3Listener ) ((Clasp3Listener)listener).enterPathWindows(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Clasp3Listener ) ((Clasp3Listener)listener).exitPathWindows(this);
		}
	}
	public static class PathNIXContext extends PathContext {
		public FilenameContext filename() {
			return getRuleContext(FilenameContext.class,0);
		}
		public List<FolderContext> folder() {
			return getRuleContexts(FolderContext.class);
		}
		public List<TerminalNode> SLASH() { return getTokens(Clasp3Parser.SLASH); }
		public FolderContext folder(int i) {
			return getRuleContext(FolderContext.class,i);
		}
		public TerminalNode SLASH(int i) {
			return getToken(Clasp3Parser.SLASH, i);
		}
		public PathNIXContext(PathContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Clasp3Listener ) ((Clasp3Listener)listener).enterPathNIX(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Clasp3Listener ) ((Clasp3Listener)listener).exitPathNIX(this);
		}
	}

	public final PathContext path() throws RecognitionException {
		PathContext _localctx = new PathContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_path);
		int _la;
		try {
			setState(110);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				_localctx = new PathWindowsContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(85);
				_la = _input.LA(1);
				if (_la==DRIVE) {
					{
					setState(84); match(DRIVE);
					}
				}

				setState(87); folder();
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==BACKSLASH) {
					{
					{
					setState(88); match(BACKSLASH);
					setState(89); folder();
					}
					}
					setState(94);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(95); filename();
				}
				break;

			case 2:
				_localctx = new PathNIXContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(98);
				_la = _input.LA(1);
				if (_la==SLASH) {
					{
					setState(97); match(SLASH);
					}
				}

				setState(100); folder();
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SLASH) {
					{
					{
					setState(101); match(SLASH);
					setState(102); folder();
					}
					}
					setState(107);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(108); filename();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FolderContext extends ParserRuleContext {
		public FolderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_folder; }
	 
		public FolderContext() { }
		public void copyFrom(FolderContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ParentFolderContext extends FolderContext {
		public TerminalNode DOTDOT() { return getToken(Clasp3Parser.DOTDOT, 0); }
		public ParentFolderContext(FolderContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Clasp3Listener ) ((Clasp3Listener)listener).enterParentFolder(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Clasp3Listener ) ((Clasp3Listener)listener).exitParentFolder(this);
		}
	}
	public static class GenericFolderContext extends FolderContext {
		public List<TerminalNode> LETTER() { return getTokens(Clasp3Parser.LETTER); }
		public TerminalNode LETTER(int i) {
			return getToken(Clasp3Parser.LETTER, i);
		}
		public GenericFolderContext(FolderContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Clasp3Listener ) ((Clasp3Listener)listener).enterGenericFolder(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Clasp3Listener ) ((Clasp3Listener)listener).exitGenericFolder(this);
		}
	}
	public static class CurrentFolderContext extends FolderContext {
		public TerminalNode DOT() { return getToken(Clasp3Parser.DOT, 0); }
		public CurrentFolderContext(FolderContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Clasp3Listener ) ((Clasp3Listener)listener).enterCurrentFolder(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Clasp3Listener ) ((Clasp3Listener)listener).exitCurrentFolder(this);
		}
	}

	public final FolderContext folder() throws RecognitionException {
		FolderContext _localctx = new FolderContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_folder);
		try {
			int _alt;
			setState(119);
			switch (_input.LA(1)) {
			case LETTER:
				_localctx = new GenericFolderContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(113); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(112); match(LETTER);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(115); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				} while ( _alt!=2 && _alt!=ATN.INVALID_ALT_NUMBER );
				}
				break;
			case DOTDOT:
				_localctx = new ParentFolderContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(117); match(DOTDOT);
				}
				break;
			case DOT:
				_localctx = new CurrentFolderContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(118); match(DOT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FilenameContext extends ParserRuleContext {
		public List<TerminalNode> LETTER() { return getTokens(Clasp3Parser.LETTER); }
		public ExtensionContext extension() {
			return getRuleContext(ExtensionContext.class,0);
		}
		public TerminalNode LETTER(int i) {
			return getToken(Clasp3Parser.LETTER, i);
		}
		public FilenameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_filename; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Clasp3Listener ) ((Clasp3Listener)listener).enterFilename(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Clasp3Listener ) ((Clasp3Listener)listener).exitFilename(this);
		}
	}

	public final FilenameContext filename() throws RecognitionException {
		FilenameContext _localctx = new FilenameContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_filename);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(121); match(LETTER);
				}
				}
				setState(124); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==LETTER );
			setState(127);
			_la = _input.LA(1);
			if (_la==DOT) {
				{
				setState(126); extension();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExtensionContext extends ParserRuleContext {
		public TerminalNode DOT() { return getToken(Clasp3Parser.DOT, 0); }
		public List<TerminalNode> LETTER() { return getTokens(Clasp3Parser.LETTER); }
		public TerminalNode LETTER(int i) {
			return getToken(Clasp3Parser.LETTER, i);
		}
		public ExtensionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_extension; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Clasp3Listener ) ((Clasp3Listener)listener).enterExtension(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Clasp3Listener ) ((Clasp3Listener)listener).exitExtension(this);
		}
	}

	public final ExtensionContext extension() throws RecognitionException {
		ExtensionContext _localctx = new ExtensionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_extension);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129); match(DOT);
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LETTER) {
				{
				{
				setState(130); match(LETTER);
				}
				}
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SolvingContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(Clasp3Parser.NEWLINE, 0); }
		public SolvingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_solving; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Clasp3Listener ) ((Clasp3Listener)listener).enterSolving(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Clasp3Listener ) ((Clasp3Listener)listener).exitSolving(this);
		}
	}

	public final SolvingContext solving() throws RecognitionException {
		SolvingContext _localctx = new SolvingContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_solving);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136); match(8);
			setState(137); match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnswerContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(Clasp3Parser.INTEGER, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(Clasp3Parser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(Clasp3Parser.NEWLINE, i);
		}
		public ModelContext model() {
			return getRuleContext(ModelContext.class,0);
		}
		public ValuesContext values() {
			return getRuleContext(ValuesContext.class,0);
		}
		public AnswerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_answer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Clasp3Listener ) ((Clasp3Listener)listener).enterAnswer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Clasp3Listener ) ((Clasp3Listener)listener).exitAnswer(this);
		}
	}

	public final AnswerContext answer() throws RecognitionException {
		AnswerContext _localctx = new AnswerContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_answer);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139); match(12);
			setState(140); match(INTEGER);
			setState(141); match(NEWLINE);
			setState(143);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IDENTIFIER) | (1L << INTEGER) | (1L << STRING) | (1L << MINUS))) != 0)) {
				{
				setState(142); model();
				}
			}

			setState(145); match(NEWLINE);
			setState(148);
			_la = _input.LA(1);
			if (_la==23) {
				{
				setState(146); match(23);
				setState(147); values();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModelContext extends ParserRuleContext {
		public FactContext fact(int i) {
			return getRuleContext(FactContext.class,i);
		}
		public TerminalNode SPACE(int i) {
			return getToken(Clasp3Parser.SPACE, i);
		}
		public List<TerminalNode> SPACE() { return getTokens(Clasp3Parser.SPACE); }
		public List<FactContext> fact() {
			return getRuleContexts(FactContext.class);
		}
		public ModelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_model; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Clasp3Listener ) ((Clasp3Listener)listener).enterModel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Clasp3Listener ) ((Clasp3Listener)listener).exitModel(this);
		}
	}

	public final ModelContext model() throws RecognitionException {
		ModelContext _localctx = new ModelContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_model);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150); fact();
			setState(155);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SPACE) {
				{
				{
				setState(151); match(SPACE);
				setState(152); fact();
				}
				}
				setState(157);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FactContext extends ParserRuleContext {
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public FactContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fact; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Clasp3Listener ) ((Clasp3Listener)listener).enterFact(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Clasp3Listener ) ((Clasp3Listener)listener).exitFact(this);
		}
	}

	public final FactContext fact() throws RecognitionException {
		FactContext _localctx = new FactContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_fact);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158); atom();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
